<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorPrimaryVariant"
    android:orientation="vertical"
    tools:context=".ui.settings.SettingsActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0sp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            android:background="?attr/colorOnPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="?attr/colorOnSecondary"
            tools:layout_height="52dp"
            tools:title="@string/settings" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:text="App"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="8sp"
        app:cardElevation="0sp"
        app:strokeWidth="0sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12sp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12sp">

                    <androidx.appcompat.widget.SwitchCompat
                        android:id="@+id/night_mode_switch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:buttonTint="@color/blueee"
                        android:drawableStart="@drawable/ic_round_dark_mode_24"
                        android:drawablePadding="20dp"
                        android:onClick="switchDarkMode"
                        android:drawableTint="@color/blueee"
                        android:includeFontPadding="false"
                        android:textColor="?attr/colorOnSecondary"
                        android:text="@string/item_dark_mode"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="20dp"
                        android:gravity="start|center"
                        android:text="Switch to dark theme"
                        android:textSize="14sp"
                        app:drawableStartCompat="@drawable/ic_round_privacy_tip_24"
                        app:drawableTint="?attr/cardBackgroundColor" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_gdpr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openGdprDialog"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ad_solid"
                        android:drawablePadding="20dp"
                        android:drawableTint="@color/blueee"
                        android:gravity="start|center"
                        android:text="@string/personalized_ads"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_round_privacy_tip_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="?attr/cardBackgroundColor"
                        android:gravity="start|center"
                        android:text="Customize ads based on preferences"
                        android:textSize="14sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12sp"
        android:layout_marginTop="12sp"
        android:text="Legal Terms"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="18sp"
        android:textStyle="bold" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginEnd="10sp"
        app:cardBackgroundColor="?attr/cardBackgroundColor"
        app:cardCornerRadius="8sp"
        app:cardElevation="0sp"
        app:strokeWidth="0sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="12sp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_privacy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="openPrivacy"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_round_privacy_tip_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="@color/blueee"
                        android:gravity="start|center"
                        android:text="@string/privacy_policy"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_round_privacy_tip_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="?attr/cardBackgroundColor"
                        android:gravity="start|center"
                        android:text="Explore our data usage policies"
                        android:textSize="14sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_closeSub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:onClick="closeSub"
                app:cardBackgroundColor="?attr/cardBackgroundColor"
                app:cardElevation="0dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="12sp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_round_privacy_tip_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="@color/blueee"
                        android:gravity="start|center"
                        android:text="Cancel Subscription"
                        android:textColor="?attr/colorOnSecondary"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_round_privacy_tip_24"
                        android:drawablePadding="20dp"
                        android:drawableTint="?attr/cardBackgroundColor"
                        android:gravity="start|center"
                        android:text="End subscription and billing cycle"
                        android:textSize="14sp" />

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>